- migrate to java17 with help of openrewrite